<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".DashBoardActivity"
        android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDashText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/dashtext"
            android:fontFamily="@font/ic_poppins_medium"
            android:textSize="@dimen/_14ssp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_9sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tvMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MAP"
            android:textColor="@color/red"
            android:fontFamily="@font/ic_poppins_medium"
            app:layout_constraintTop_toTopOf="@+id/tvDashText"
            app:layout_constraintBottom_toBottomOf="@+id/tvDashText"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_3sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textSize="@dimen/_10ssp"/>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/red"
            android:fontFamily="@font/ic_poppins_medium"
            app:layout_constraintTop_toTopOf="@+id/tvDashText"
            app:layout_constraintBottom_toBottomOf="@+id/tvDashText"
            app:layout_constraintStart_toEndOf="@+id/tvDashText"
            android:layout_marginHorizontal="@dimen/_50sdp"
            android:textSize="@dimen/_10ssp"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/ic_bg_rd_gray" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/add_item_card"
        android:paddingHorizontal="@dimen/_23sdp"
        app:layout_constraintBottom_toTopOf="@id/tvAddItem"
        app:layout_constraintTop_toBottomOf="@id/clHeader">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvAddItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bg_rd_red"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:paddingVertical="@dimen/_13sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:text="@string/addItem"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/ic_poppins_medium"
        android:layout_marginHorizontal="@dimen/_21sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>